k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: api-ingress
spec:
  rules:
  - host: petclinic.<INGRESS_SUBDOMAIN>
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: api-gateway
          servicePort: 80
      - path: /api/vet/(.*)
        backend:
          serviceName: vets-service
          servicePort: 80
      - path: /api/visit/(.*)
        backend:
          serviceName: visits-service
          servicePort: 80
      - path: /api/customer/(.*)
        backend:
          serviceName: customers-service
          servicePort: 80
      - path: /api/gateway/(.*)
        backend:
          serviceName: api-gateway
          servicePort: 80
